// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SquircleIconPopUpModal should render with message 1`] = `
<View
  accessibilityLabel="squircleModal"
  accessible={true}
  style={
    {
      "backgroundColor": "rgba(0,0,0,.6)",
      "height": 1334,
      "position": "absolute",
      "top": 0,
      "width": 750,
      "zIndex": 9,
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
        },
        {
          "flex": 1,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          {
            "width": 300,
          },
          {
            "height": 300,
          },
          null,
          null,
          null,
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 16,
            "elevation": 6,
            "padding": 24,
          },
          null,
          null,
        ]
      }
    >
      <View
        accessible={true}
        style={
          [
            {
              "alignItems": undefined,
              "flexDirection": "column",
              "justifyContent": undefined,
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            {
              "alignItems": "center",
            },
            null,
            null,
            null,
            null,
          ]
        }
      >
        SuccessLogo
        <Text
          style={
            [
              {
                "color": "#000000",
                "fontSize": 16,
                "lineHeight": 18,
              },
              {
                "fontFamily": "Montserrat_600SemiBold",
                "fontSize": 15,
              },
              null,
              {
                "textAlign": "left",
              },
              {
                "marginBottom": 0,
                "marginEnd": 0,
                "marginStart": 0,
                "marginTop": 25,
              },
              null,
              {
                "fontSize": 17,
                "textAlign": "center",
              },
            ]
          }
        >
          Success!
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SquircleIconPopUpModal should render without message 1`] = `
<View
  accessibilityLabel="squircleModal"
  accessible={true}
  style={
    {
      "backgroundColor": "rgba(0,0,0,.6)",
      "height": 1334,
      "position": "absolute",
      "top": 0,
      "width": 750,
      "zIndex": 9,
    }
  }
>
  <View
    accessible={true}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
        },
        {
          "flex": 1,
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ]
    }
  >
    <View
      accessible={true}
      style={
        [
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "justifyContent": undefined,
          },
          null,
          null,
          null,
          null,
          {
            "width": 300,
          },
          {
            "height": 300,
          },
          null,
          null,
          null,
          {
            "backgroundColor": "#FFFFFF",
            "borderRadius": 16,
            "elevation": 6,
            "padding": 24,
          },
          null,
          null,
        ]
      }
    >
      <View
        accessible={true}
        style={
          [
            {
              "alignItems": undefined,
              "flexDirection": "column",
              "justifyContent": undefined,
            },
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            {
              "alignItems": "center",
            },
            null,
            null,
            null,
            null,
          ]
        }
      >
        SuccessLogo
      </View>
    </View>
  </View>
</View>
`;
